--- a/src/components/Main/Projects/Projects.css
+++ b/src/components/Main/Projects/Projects.css
@@ -18,6 +18,7 @@
 #projectImage{
   border:1px solid #192842;
   box-shadow: 10px 10px 5px #192842;
+  z-index: -1;
 }
   .techInProject{
     display:flex;
@@ -34,6 +35,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  z-index: -1;
 }
 .appDescription{
   font-size: 1.1rem;
@@ -47,4 +49,15 @@
 }
 #gitAndLiveLinks a{
   padding:0 1% 0 1%;
+}
+#overlay{
+  width:600px;
+  height:500px;
+  background-color:rgba(211,211,211,0.9);
+  position:fixed;
+  z-index:1;
+  transition: background-color 1s;
+}
+#overlay:hover{
+  background-color: rgba(0,0,0,0);
 }
