--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,7 @@
     box-shadow: 5px 5px 10px #192842;
     position:fixed;
     background-color:#203354;
+    z-index:2;
 }
 #logoAndResume{
     width:15%;
