--- a/src/components/Main/Projects/Projects.css
+++ b/src/components/Main/Projects/Projects.css
@@ -1,33 +1,23 @@
 #projectExamplesWrapper{
-    display:flex;
-    justify-content:space-around;
-    align-items: space-around;
-    flex-direction:column;
-    align-items: center;
-    width:100%;
-  }
-  .projectExample{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width:100%;
-    height:fit-content;
-    padding: 2% 2%;
-  }
-#projectImage{
-  border:1px solid #192842;
-  box-shadow: 10px 10px 5px #192842;
-  z-index: -1;
+  display:flex;
+  justify-content:space-around;
+  align-items: space-around;
+  flex-direction:column;
+  align-items: center;
+  width:100%;
 }
-  .techInProject{
-    display:flex;
-    flex-direction:row;
-    justify-content: space-around;
-    width:fit-content;
-  }
-.specificTech{
-  padding:10%;
+.techInProject{
+  display:flex;
+  flex-direction:row;
+  justify-content: space-around;
+  width:fit-content;
+}
+.techChip{
+  margin:10%;
+  padding:5%;
+  font-size:1.2rem;
+  border-radius: 20%;
+  background-color:#43506d;
 }
 #rightSideInfo{
   width:50%;
@@ -35,7 +25,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  z-index: -1;
+  z-index: 0;
 }
 .appDescription{
   font-size: 1.1rem;
@@ -50,14 +40,18 @@
 #gitAndLiveLinks a{
   padding:0 1% 0 1%;
 }
-#overlay{
-  width:600px;
-  height:500px;
-  background-color:rgba(211,211,211,0.9);
-  position:fixed;
-  z-index:1;
-  transition: background-color 1s;
+#projectExample{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width:100%;
+  height:fit-content;
+  padding: 2% 2%;
+  z-index:0;
 }
-#overlay:hover{
-  background-color: rgba(0,0,0,0);
+#projectImage{
+  border:1px solid #192842;
+  box-shadow: 10px 10px 5px #192842;
+  z-index: 0;
 }
