--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content:space-between;
     width:100%;
-    height:7%;
+    height:12%;
     box-shadow: 5px 5px 10px #192842;
     position:fixed;
     background-color:#203354;
@@ -32,23 +32,27 @@
     display:none;
     width:50px;
     height:50px;
-    border:1px solid black;
 }
 #lineOne, #lineTwo, #lineThree{
     animation:none;
     transform-origin:center;
+    stroke:white;
+    
+}
+#svgWrapper{
+    border:1px solid white;
 }
 @keyframes lineOneMovement{
     from{
         transform: translate(0px, 0px) rotate(0turn);
     }
     to{
-        transform: translate(-10px, 6px) rotate(0.125turn);
+        transform: translate(-7.5px, 7.5px) rotate(0.125turn);
     }
 }
 @keyframes lineOneMovementRev{
     from{
-        transform: translate(-10px, 6px) rotate(0.125turn);
+        transform: translate(-7.5px, 7.5px) rotate(0.125turn);
     }
     to{
         transform: translate(0px, 0px) rotate(0turn);
@@ -75,15 +79,15 @@
         transform: translate(0px, 0px) rotate(0.turn);
     }
     to{
-        transform: translate(-5px, -8px) rotate(-0.125turn);
+        transform: translate(-7.5px, -6px) rotate(-0.125turn);
     }
 }
 @keyframes lineThreeMovementRev{
     from{
-        transform: translate(-5px, -8px) rotate(-0.125turn);
+        transform: translate(-7.5px, -6px) rotate(-0.125turn);
     }
     to{
-        transform: translate(0px, 0px) rotate(0.turn);
+        transform: translate(0px, 0px) rotate(0turn);
     }
 }
 
