--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,43 +3,52 @@
     flex-direction:row;
     align-items: center;
     justify-content:space-between;
-    width:100%;
-    height:12%;
+    width:100vw;
+    height:8%;
     box-shadow: 5px 5px 10px #192842;
     position:fixed;
     background-color:#203354;
-    z-index:2;
+    z-index: 5;
 }
 #logoAndResume{
     width:15%;
-    min-width:250px;
     display:flex;
     flex-direction:row;
     justify-content: space-between;
     align-items: center;
 }
+#pageLinks{
+    width:40%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding:0;
+    margin-right:2%;
+}
+#pageLinks a{
+    margin:0;
+}
 #logo{
    margin:3% 0 0% 3%;
 }
-#pageLinks{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-    min-width:400px;
-    width:20%;
-}
 #openSideLinks{
-    display:none;
     width:50px;
     height:50px;
+}
+#svgWrapper{
+    border:1px solid white;
+    display:none;
+    width:51px;
+    height:51px;
+    margin-right:2%;
 }
 #lineOne, #lineTwo, #lineThree{
     animation:none;
     transform-origin:center;
     stroke:white;
 }
-#svgWrapper{
-    border:1px solid white;
+.header a:hover{
+    animation:pulse 1s forwards infinite;
 }
 @keyframes lineOneMovement{
     from{
@@ -90,11 +99,14 @@
     }
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 1000px){
     #pageLinks, #resumeLink{
         display:none;
     }
-    #openSideLinks{
+    #svgWrapper{
         display:block;
+    }
+    .header{
+        height:12%;
     }
 }
