--- a/src/components/Main/Projects/Projects.css
+++ b/src/components/Main/Projects/Projects.css
@@ -55,3 +55,16 @@
   box-shadow: 10px 10px 5px #192842;
   z-index: 0;
 }
+@media only screen and (max-width: 1200px){
+  #projectImage{
+    width:400px;
+    height:auto;
+  }
+  .appDescription{
+    font-size: 0.9rem;
+    padding:0% 5% 0% 5%;
+  }
+  #projects a{
+    font-size: 1.1rem;
+  }
+}
