--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,14 +6,16 @@
   width:100%;
   padding-top:6%;
 }
-.sectionTitle{
-  padding-left:10%;
-}
 .mainBodySection{
   display:flex;
   flex-direction:column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width:75%;
-  margin: 6% 0 6% 0;
+  padding-top:10%;
+}
+@media only screen and (max-width:1050px){
+  #main{
+    padding-top:10%;
+  }
 }
