--- a/src/components/Main/WhoAmI/WhoAmI.css
+++ b/src/components/Main/WhoAmI/WhoAmI.css
@@ -1,6 +1,6 @@
 #aboutDescription{
-    width:50%;
+    width:500px;
     text-indent: 60px;
-    margin-left:25%;
     margin-bottom:2%;
+    text-align: center;
   }
