--- a/src/components/LoadScreen/LoadScreen.css
+++ b/src/components/LoadScreen/LoadScreen.css
@@ -1,6 +1,6 @@
 #LoadScreen{
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
     position:fixed;
     background-color:#00001c;
     animation: load 2s forwards;
