--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,6 +14,9 @@
   width:75%;
   padding-top:10%;
 }
+#tylerDansby{
+  margin-top:50px;
+}
 @media only screen and (max-width:1050px){
   #main{
     padding-top:10%;
