--- a/src/components/Main/WhoAmI/WhoAmI.css
+++ b/src/components/Main/WhoAmI/WhoAmI.css
@@ -1,5 +1,6 @@
 #aboutDescription{
-    width:500px;
+    min-width:500px;
+    width:60%;
     text-indent: 60px;
     margin-bottom:2%;
     text-align: center;
