--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -11,11 +11,14 @@
   flex-direction:column;
   align-items: center;
   justify-content: center;
+  text-align: left;
   width:75%;
   padding-top:10%;
 }
 #tylerDansby{
   margin-top:50px;
+  font-size:5rem;
+  font-style: italic;
 }
 @media only screen and (max-width:1050px){
   #main{
