--- a/src/components/Main/Contact/Contact.css
+++ b/src/components/Main/Contact/Contact.css
@@ -1,3 +1,9 @@
 .contactLink{
     align-self: center;
 }
+#contact a{
+    padding:1%;
+}
+#contact a:hover{
+    background-color:rgba(25, 78, 74, 1);
+  }
