--- a/src/components/Main/WhoAmI/WhoAmI.css
+++ b/src/components/Main/WhoAmI/WhoAmI.css
@@ -5,7 +5,13 @@
   margin-bottom:2%;
   text-align: left;
 }
-
+#aboutMe a{
+  font-size: 1.5rem;
+  padding:0.5%;
+}
+#aboutMe a:hover{
+  background-color: rgba(25, 78, 74, 1);
+}
 @media only screen and (min-width:1600px){
   #aboutDescription{
     font-size:1.8rem;
