--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content:space-between;
     width:100%;
-    height:100px;
+    height:8%;
+    max-height:100px;
     box-shadow: 5px 5px 10px #192842;
     position:fixed;
     background-color:#203354;
