--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,8 +19,27 @@
   font-size:5rem;
   font-style: italic;
 }
-@media only screen and (max-width:1050px){
+@media only screen and (max-width:1050px) and (min-width:900px){
   #main{
     padding-top:10%;
+  }
+}
+@media only screen and (max-width:899px) and (min-width:800px){
+  #main{
+    padding-top:10%;
+  }
+}
+@media only screen and (max-width:799px){
+  #main{
+    padding-top:10%;
+  }
+  #tylerDansby{
+    font-size:3rem;
+  }
+  .sectionTitle{
+    font-size: 3rem;
+  }
+  .mainBodySection{
+    width:65%;
   }
 }
