--- a/src/components/Main/WhoAmI/WhoAmI.css
+++ b/src/components/Main/WhoAmI/WhoAmI.css
@@ -1,9 +1,7 @@
 #aboutDescription{
-  min-width:500px;
   width:60%;
-  text-indent: 60px;
   margin-bottom:2%;
-  text-align: left;
+  text-align: center;
 }
 #aboutMe a{
   font-size: 1.5rem;
@@ -15,5 +13,10 @@
 @media only screen and (min-width:1600px){
   #aboutDescription{
     font-size:1.8rem;
+  }
+}
+@media only screen and (max-width:800px){
+  #aboutDescription{
+    width:90%;
   }
 }
