--- a/src/components/Main/WhatDoIKnow/WhatDoIKnow.css
+++ b/src/components/Main/WhatDoIKnow/WhatDoIKnow.css
@@ -19,7 +19,7 @@
 #skills ul{
   columns:2;
 }
-#javascriptLogo, #typescriptLogo, #gitLogo{
+#javascriptLogo, #typescriptLogo, #gitLogo, #pythonLogo{
   padding:6%;
 }
 @media only screen and (min-width:1300px) {
