--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -12,10 +12,74 @@
 #school, #devCourses, #workExperience{
     margin-bottom:2%;
     margin-top:2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 .subscript{
-    margin-left:15%;
+    margin-left:40px;
 }
 .dates{
     font-style: italic;
+}
+.jobContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.jobInfo{
+    margin-left: 20px;
+}
+.sectionTitle{
+    align-self: center;
+}
+.workTechList{
+    display: flex;
+    flex-direction: row;
+    margin-left:40px;
+}
+.workTech{
+    margin-right:3px;
+}
+.workTechChip{
+    margin-top:5px;
+    margin-left:5px;
+    margin-right:5px;
+    padding:10px;
+    font-size:1rem;
+    border-radius: 20%;
+    background-color:#43506d;
+}
+#retriumLogo, #HMSLLogo, #sodexoLogo{
+    width:75px;
+    height:75px;
+    border:3px solid black;
+    background-color: white;
+}
+#retriumLogo{
+    padding:5px;
+}
+#sodexoLogo{
+    padding:0 5px 10px 5px;
+}
+.educationExperienceTitle{
+    font-size: 2rem;
+    align-self: center;
+}
+@media only screen and (max-width:550px) {
+    #education{
+        font-size: 1.2rem;
+    }
+    #retriumLogo, #HMSLLogo, #sodexoLogo{
+        width:50px;
+        height:50px;
+    }
+    .workTechChip{
+        font-size:0.8rem;
+    }
+    .educationExperienceTitle{
+        font-size: 1.8rem;
+        align-self: center;
+    }
 }
