--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -44,6 +44,7 @@
   flex-direction: row;
   justify-content: center;
   width:100%;
+  margin-top: 5px;
 }
 #gitAndLiveLinks a{
   padding:0 1% 0 1%;
