--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -28,7 +28,7 @@
     flex-direction: row;
     justify-content: center;
 }
-.jobInfo{
+.jobInfo, .schoolInfo{
     margin-left: 20px;
 }
 .sectionTitle{
@@ -48,10 +48,14 @@
     margin-right:5px;
     padding:10px;
     font-size:1rem;
-    border-radius: 20%;
+    border-radius: 25px;
     background-color:#43506d;
 }
-#retriumLogo, #HMSLLogo, #sodexoLogo{
+.schoolContainer{
+    display:flex;
+    flex-direction:row;
+}
+#retriumLogo, #HMSLLogo, #sodexoLogo, #UHLogo{
     width:75px;
     height:75px;
     border:3px solid black;
@@ -63,6 +67,9 @@
 #sodexoLogo{
     padding:0 5px 10px 5px;
 }
+#UHLogo{
+    padding: 5px;
+}
 .educationExperienceTitle{
     font-size: 2rem;
     align-self: center;
@@ -71,7 +78,7 @@
     #education{
         font-size: 1.2rem;
     }
-    #retriumLogo, #HMSLLogo, #sodexoLogo{
+    #retriumLogo, #HMSLLogo, #sodexoLogo, #UHLogo{
         width:50px;
         height:50px;
     }
